--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,6 @@ body{
 .header {
     margin-left: 200px;
 }
-.projects {
-}
-.footer {
-}
 .logo-name{
     display: flex;
     justify-content: space-between;
@@ -89,6 +85,21 @@ body{
     height: 240px;
     margin-top: 20px;
     background-image: url('../img/logoUpdate4.svg');
+    cursor: pointer;
+}
+.logo {
+    animation: 5s linear 0s normal none infinite running logo;
+  }
+  @keyframes logo {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+.logo:hover{
+    animation: 5s linear 0s normal none infinite running ;
 }
 .name {
     font-size: 168px;
@@ -112,8 +123,46 @@ body{
 .spec p:last-child{
     padding-left: 160px;
 }
-.icon {
+.projects {
+
 }
+.carousel-3d {
+    padding: 20px;
+    -webkit-perspective: 500px;
+    perspective: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+.carousel-3d > * {
+    flex: 0 0 auto;
+}
+.carousel-3d figure {
+    margin: 0;
+    width: 50%;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+}
+.carousel-3d figure img,
+.carousel-3d figure div {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0;
+}
+.carousel-3d figure img {
+    user-select: none;
+}
+.carousel-3d figure div:not(:first-of-type),
+.carousel-3d figure img:not(:first-of-type) {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
 
 @media(max-width: 1730px){ 
  
